[package]
name = "wasm-sudoku"
version = "0.1.0"
authors = ["bryantdeters <bryant.j.deters@centene.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
itertools = "0.10.5"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "solver_benchmark"
harness = false
